# MusicalJoycons

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  Untitled  run_coverage.ps1
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yml  rust_build.yml
scripts/: pair-joycons.sh
src/: lib.rs  main.rs
src/device_audio/: audio_input.rs  fft.rs  mapping.rs  mod.rs
src/joycon/: bluetooth.rs  device.rs  hid.rs  interface.rs  joycon.rs  manager.rs  mod.rs  tests.rs  types.rs
src/midi/: mod.rs  parts.rs  playback.rs  rubmle.rs  rumble.rs  scoring.rs  track_analysis.rs  track_types.rs
tests/: joycon_tests.rs
