[package]
name = "musical-joycons"
version = "0.1.3"
edition = "2021"
description = "Play MIDI files through Nintendo JoyCon rumble motors"
license = "MIT"
repository = "https://github.com/example/musical-joycons"

[dependencies]
crossterm = "0.29.0"
hidapi = "2.6.3"
midly = "0.5.3"
thiserror = "2.0.9"

[dev-dependencies]
mockall = "0.13.1"

[[bin]]
name = "musical_joycons"
path = "src/main.rs"

[profile.test]
opt-level = 0
debug = true
